# stg-8nn-scaffold-example

./: .gitmodules  CMakeLists.txt  CMakeLists_vendor_dsdl.txt  README.md
blinky/: app_config.h  blinky.c  led.c  led.h  uavcan_override.c
dsdl/blinky/: 200.LedControl.uavcan
